{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 16,
  "lineage": "dedea954-2f9a-31b3-021b-9525ed07090d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "hosts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-076e3756930a93fbb",
            "arn": "arn:aws:ec2:us-west-2:826151320380:instance/i-0ce882616cd42c9cd",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ce882616cd42c9cd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "auto",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0af0da53b4dde9e2c",
            "private_dns": "ip-10-0-0-21.us-west-2.compute.internal",
            "private_ip": "10.0.0.21",
            "public_ip": "34.214.6.3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04c2edb82eff4f338",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06b8038d58134f9f7",
            "tags": {
              "Name": "My-Linux-0",
              "Type": "My-Linux-0"
            },
            "tags_all": {
              "Name": "My-Linux-0",
              "Type": "My-Linux-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0814a1653fb527193"
            ]
          },
          "dependencies": [
            "aws_security_group.duc_sg",
            "aws_subnet.duc_subnets",
            "aws_vpc.duc_vpc",
            "data.aws_ami.amzLinux2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-073ff6027d02b1312",
            "arn": "arn:aws:ec2:us-west-2:826151320380:instance/i-04e0657c9b2815aa2",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04e0657c9b2815aa2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "auto",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bf4230743e8241a2",
            "private_dns": "ip-10-0-0-89.us-west-2.compute.internal",
            "private_ip": "10.0.0.89",
            "public_ip": "35.92.106.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05ccd2485aac24293",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06b8038d58134f9f7",
            "tags": {
              "Name": "Ansible-Ubuntu"
            },
            "tags_all": {
              "Name": "Ansible-Ubuntu"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0814a1653fb527193"
            ]
          },
          "dependencies": [
            "aws_security_group.duc_sg",
            "aws_subnet.duc_subnets",
            "aws_vpc.duc_vpc",
            "data.aws_ami.ubuntu",
            "data.template_cloudinit_config.user-data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "duc_vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:826151320380:internet-gateway/igw-05a72016e0bcb02a9",
            "id": "igw-05a72016e0bcb02a9",
            "owner_id": "826151320380",
            "tags": {
              "Name": "duc_vpc_igw"
            },
            "tags_all": {
              "Name": "duc_vpc_igw"
            },
            "vpc_id": "vpc-05c6c3ec84e92650b"
          },
          "dependencies": [
            "aws_vpc.duc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "duc_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:826151320380:route-table/rtb-05fcdb8abad171d1c",
            "id": "rtb-05fcdb8abad171d1c",
            "owner_id": "826151320380",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05a72016e0bcb02a9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "duc_vpc_public_rt"
            },
            "tags_all": {
              "Name": "duc_vpc_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c6c3ec84e92650b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.duc_vpc_igw",
            "aws_vpc.duc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_sub_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041c58f68c0d98f0e",
            "route_table_id": "rtb-05fcdb8abad171d1c",
            "subnet_id": "subnet-06b8038d58134f9f7"
          },
          "dependencies": [
            "aws_internet_gateway.duc_vpc_igw",
            "aws_route_table.duc_public_rt",
            "aws_subnet.duc_subnets",
            "aws_vpc.duc_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048399c62d6fbe4a6",
            "route_table_id": "rtb-05fcdb8abad171d1c",
            "subnet_id": "subnet-035a1f267b6390d5d"
          },
          "dependencies": [
            "aws_internet_gateway.duc_vpc_igw",
            "aws_route_table.duc_public_rt",
            "aws_subnet.duc_subnets",
            "aws_vpc.duc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "duc_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:826151320380:security-group/sg-0814a1653fb527193",
            "description": "Allow incoming connections.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0814a1653fb527193",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "duc-sg",
            "name_prefix": "",
            "owner_id": "826151320380",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05c6c3ec84e92650b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.duc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "duc_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:826151320380:subnet/subnet-06b8038d58134f9f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b8038d58134f9f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "826151320380",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "duc_subnets_1"
            },
            "tags_all": {
              "Name": "duc_subnets_1"
            },
            "vpc_id": "vpc-05c6c3ec84e92650b"
          },
          "dependencies": [
            "aws_vpc.duc_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:826151320380:subnet/subnet-035a1f267b6390d5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035a1f267b6390d5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "826151320380",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "duc_subnets_2"
            },
            "tags_all": {
              "Name": "duc_subnets_2"
            },
            "vpc_id": "vpc-05c6c3ec84e92650b"
          },
          "dependencies": [
            "aws_vpc.duc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "duc_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:826151320380:vpc/vpc-05c6c3ec84e92650b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0df4f9d09c6372341",
            "default_route_table_id": "rtb-0b5c3d319dd3116d9",
            "default_security_group_id": "sg-0da46a11578410a0e",
            "dhcp_options_id": "dopt-0e0881c59afc685ff",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05c6c3ec84e92650b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b5c3d319dd3116d9",
            "owner_id": "826151320380",
            "tags": {
              "Name": "duc_vpc"
            },
            "tags_all": {
              "Name": "duc_vpc"
            }
          }
        }
      ]
    }
  ]
}